# LinearAlgebra

./: .gitignore  Remarks.txt  Slides.pptx  Struct matrix.docx  Vector.cpp  master  new-behavior.txt  ~$ruct matrix.docx
LinearAlgebra/: LinearAlgebra.sln
LinearAlgebra/Debug/: LinearAlgebra.ilk
LinearAlgebra/LinearAlgebra/: ArrayVector.h  ArrayVector.inl  AssignmentBuffer.h  CMakeLists.txt  LLL.cpp  LLL.h  LLL.inl  LLL_Tests.cpp  LinearAlgebra.vcxproj  LinearAlgebra.vcxproj.filters  ListVector.h  ListVector.inl  Manger.cpp  Manger.h  Martix.inl  Matrix.cpp  Matrix.h  MatrixTests.cpp  SmartTests.cpp  SmartVector.h  SmartVector.inl  Tests.cpp  Tests.h  Vector.cpp  Vector.h  VectorTests.cpp  desktop.ini  tempSmart.txt
LinearAlgebra/LinearAlgebra/Debug/: lll.obj.enc  vc141.idb
LinearAlgebra/LinearAlgebra/Debug/LinearAlgebra.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LinearAlgebra.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LinearAlgebra/LinearAlgebra/Tests/: MatrixTests.cpp  SmartTests.cpp  Tests.cpp  Tests.h  VectorTests.cpp
hashCode/: hashCode.sln
hashCode/hashCode/: hashCode.vcxproj  hashCode.vcxproj.filters  sectionE.cpp
